--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ImageBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ImageBlockTableViewCell.xib
@@ -16,14 +16,11 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfP-Ht-jrX">
                         <rect key="frame" x="8" y="8" width="304" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="x4M-zF-PiY"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" image="4bf2ccad86764c05b5c7f0eefc7e9f93.gif" translatesAutoresizingMaskIntoConstraints="NO" id="Fvj-ka-sv0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fvj-ka-sv0">
                         <rect key="frame" x="8" y="38" width="304" height="370"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="370" id="RAS-ih-13T"/>
@@ -31,13 +28,14 @@
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="CEQ-ex-Fao"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="BOn-I8-dqq"/>
                     <constraint firstItem="NfP-Ht-jrX" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="DNu-HQ-71g"/>
                     <constraint firstItem="NfP-Ht-jrX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="H2W-9F-RSr"/>
-                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Lbw-Cd-zQP"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="top" secondItem="NfP-Ht-jrX" secondAttribute="bottom" constant="8" id="Mac-Sw-XsJ"/>
                     <constraint firstItem="NfP-Ht-jrX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="RgF-Pv-5ZS"/>
-                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="top" secondItem="NfP-Ht-jrX" secondAttribute="bottom" constant="8" id="We5-Zt-jKD"/>
-                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="YJt-r8-tR6"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="fYc-hH-4De"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="top" secondItem="NfP-Ht-jrX" secondAttribute="bottom" constant="8" id="jdX-Ou-taE"/>
+                    <constraint firstItem="Fvj-ka-sv0" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="os1-CM-fah"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -48,7 +46,4 @@
             <point key="canvasLocation" x="280" y="447.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="4bf2ccad86764c05b5c7f0eefc7e9f93.gif" width="500" height="226"/>
-    </resources>
 </document>
