--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
@@ -2,39 +2,56 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="67" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
-                        <rect key="frame" x="68" y="8" width="244" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="QR" translatesAutoresizingMaskIntoConstraints="NO" id="sQI-f1-ya2">
-                        <rect key="frame" x="8" y="8" width="52" height="51"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTR-s9-34N">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sQI-f1-ya2">
+                                <rect key="frame" x="8" y="8" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="7r4-xy-Cil"/>
+                                    <constraint firstAttribute="height" constant="52" id="rOi-td-l6b"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
+                                <rect key="frame" x="68" y="39" width="244" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
+                                <rect key="frame" x="68" y="8" width="244" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="52" id="7r4-xy-Cil"/>
-                            <constraint firstAttribute="height" constant="51" id="rOi-td-l6b"/>
+                            <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="15" id="71b-Wu-c0a"/>
+                            <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="oTR-s9-34N" secondAttribute="leading" constant="8" id="CFL-ck-2Pu"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="F8h-og-kEF"/>
+                            <constraint firstAttribute="trailing" secondItem="0mE-iO-IL7" secondAttribute="trailing" constant="8" id="Fbt-gq-58Q"/>
+                            <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="MDq-of-HgF"/>
+                            <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="Pcg-yr-diH"/>
+                            <constraint firstItem="0mE-iO-IL7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="QkV-db-XeW"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="ltc-fW-scu"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="vJj-Pn-TNt"/>
+                            <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="10" id="x60-3u-k3u"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCQ-bY-3DK">
-                        <rect key="frame" x="68" y="37" width="244" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
                         <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -43,31 +60,24 @@
                         </connections>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="pCQ-bY-3DK" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="2JJ-Zd-R9l"/>
-                    <constraint firstItem="dMs-iS-weg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="5zt-jo-OQ6"/>
-                    <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="FEG-m6-LPx"/>
-                    <constraint firstItem="pCQ-bY-3DK" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="MAc-kn-aVe"/>
-                    <constraint firstItem="pCQ-bY-3DK" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="8" id="Rk4-tm-hIc"/>
-                    <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="WMw-xI-mPa"/>
-                    <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="top" id="Y6s-GA-eZh"/>
-                    <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="ZM8-8E-4PD"/>
-                    <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="pCQ-bY-3DK" secondAttribute="leading" id="Zs0-mj-73w"/>
-                    <constraint firstAttribute="bottom" secondItem="dMs-iS-weg" secondAttribute="bottom" id="bdZ-uB-cSv"/>
-                    <constraint firstItem="dMs-iS-weg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cVq-zR-NZL"/>
-                    <constraint firstAttribute="trailing" secondItem="dMs-iS-weg" secondAttribute="trailing" id="lNg-Jf-uOM"/>
-                    <constraint firstItem="ra4-P8-pN7" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="laT-t4-KmJ"/>
-                    <constraint firstItem="pCQ-bY-3DK" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="vlW-nH-GmP"/>
-                    <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="vpH-9u-Ohp"/>
+                    <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="2" id="4Tw-kp-o1z"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AWK-10-juO"/>
+                    <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="Kkv-96-Rpp"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cjX-I8-OZE"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="e29-rO-lj2"/>
+                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kgr-F4-2NT"/>
+                    <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="wr7-v2-GRb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="icon" destination="sQI-f1-ya2" id="AgK-ga-PR8"/>
+                <outlet property="linkTextLabel" destination="0mE-iO-IL7" id="ZoU-sB-UZZ"/>
                 <outlet property="titleLabel" destination="ra4-P8-pN7" id="iVY-TK-BKH"/>
+                <outlet property="viewForBackgroundColor" destination="oTR-s9-34N" id="xg5-Qm-WnH"/>
             </connections>
-            <point key="canvasLocation" x="410" y="481.5"/>
+            <point key="canvasLocation" x="410" y="487"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="QR" width="30" height="30"/>
-    </resources>
 </document>
