--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -24,13 +24,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
-                                <rect key="frame" x="68" y="39" width="244" height="21"/>
+                                <rect key="frame" x="82" y="39" width="230" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
-                                <rect key="frame" x="68" y="8" width="244" height="21"/>
+                                <rect key="frame" x="82" y="8" width="230" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -44,8 +44,8 @@
                             <constraint firstAttribute="trailing" secondItem="0mE-iO-IL7" secondAttribute="trailing" constant="8" id="Fbt-gq-58Q"/>
                             <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="MDq-of-HgF"/>
                             <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="Pcg-yr-diH"/>
-                            <constraint firstItem="0mE-iO-IL7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="QkV-db-XeW"/>
-                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="ltc-fW-scu"/>
+                            <constraint firstItem="0mE-iO-IL7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="22" id="QkV-db-XeW"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="22" id="ltc-fW-scu"/>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="vJj-Pn-TNt"/>
                             <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="10" id="x60-3u-k3u"/>
                         </constraints>
