--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
@@ -1,18 +1,58 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ContentBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="ContentBlockTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="335" height="121"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nIv-r2-k2O">
+                        <rect key="frame" x="8" y="8" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="7CL-5x-kb9"/>
+                            <constraint firstAttribute="height" constant="100" id="SH9-Cc-6an"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkk-b8-aKr">
+                        <rect key="frame" x="116" y="37" width="211" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khd-fo-I9i">
+                        <rect key="frame" x="116" y="8" width="211" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4OA-HE-7Sn"/>
+                    <constraint firstItem="nIv-r2-k2O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="FUu-hs-26Q"/>
+                    <constraint firstItem="nIv-r2-k2O" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="KqH-DJ-wjW"/>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="leading" secondItem="khd-fo-I9i" secondAttribute="leading" id="TXT-Mk-9Vw"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="XmL-3Y-vgK"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Gkk-b8-aKr" secondAttribute="bottom" constant="54" id="YbU-9C-9K3"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="leading" secondItem="nIv-r2-k2O" secondAttribute="trailing" constant="8" id="eWF-bx-xGu"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="nIv-r2-k2O" secondAttribute="bottom" constant="4" id="swk-ek-W12"/>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="top" secondItem="khd-fo-I9i" secondAttribute="bottom" constant="8" id="zhK-Y2-7bZ"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="zsc-ct-GsF"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="contentExcerptLabel" destination="Gkk-b8-aKr" id="HNn-Pi-FfQ"/>
+                <outlet property="contentImageView" destination="nIv-r2-k2O" id="bir-Uh-6EZ"/>
+                <outlet property="contentTitleLabel" destination="khd-fo-I9i" id="KoO-F4-pdP"/>
+            </connections>
+            <point key="canvasLocation" x="379.5" y="551.5"/>
         </tableViewCell>
     </objects>
 </document>
