--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/EbookBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/EbookBlockTableViewCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -14,31 +14,28 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgy-VZ-T9c">
-                        <rect key="frame" x="68" y="8" width="258" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="258" id="TGA-9A-85e"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgy-VZ-T9c">
+                        <rect key="frame" x="78" y="8" width="248" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-w0-lZh">
-                        <rect key="frame" x="68" y="33" width="258" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTf-w0-lZh">
+                        <rect key="frame" x="78" y="33" width="248" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Map" translatesAutoresizingMaskIntoConstraints="NO" id="Zcc-62-G5Y">
-                        <rect key="frame" x="8" y="8" width="52" height="51"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ebook" translatesAutoresizingMaskIntoConstraints="NO" id="Zcc-62-G5Y">
+                        <rect key="frame" x="8" y="8" width="52" height="52"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="51" id="62s-JU-6u8"/>
+                            <constraint firstAttribute="height" constant="52" id="62s-JU-6u8"/>
                             <constraint firstAttribute="width" constant="52" id="uQ8-pO-7Sh"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XW-kA-pb1">
-                        <rect key="frame" x="68" y="50" width="97" height="30"/>
-                        <state key="normal" title="Herunterladen">
+                        <rect key="frame" x="0.0" y="0.0" width="334" height="78"/>
+                        <state key="normal">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                         <connections>
@@ -46,17 +43,21 @@
                         </connections>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="0.901959292763158" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="trailing" secondItem="gTf-w0-lZh" secondAttribute="trailing" id="AVU-xp-oPv"/>
-                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="HBB-EY-uXM"/>
-                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="JBr-5l-KVv"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="leading" secondItem="xgy-VZ-T9c" secondAttribute="leading" id="NSI-2a-Pa4"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Nlw-c4-k2t"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="leading" secondItem="3XW-kA-pb1" secondAttribute="leading" id="OOm-x1-Ldl"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="Zcc-62-G5Y" secondAttribute="trailing" constant="8" id="cpi-M5-zEe"/>
-                    <constraint firstItem="gTf-w0-lZh" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="4" id="fTg-Ej-Agg"/>
-                    <constraint firstItem="3XW-kA-pb1" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="21" id="kDu-7n-sCK"/>
-                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="top" secondItem="Zcc-62-G5Y" secondAttribute="top" id="sQ5-31-oPD"/>
+                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="2GO-rO-40X"/>
+                    <constraint firstItem="3XW-kA-pb1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5WG-MR-gN2"/>
+                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="Zcc-62-G5Y" secondAttribute="trailing" constant="18" id="9fi-og-s6C"/>
+                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="G1P-t0-sx4"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="gTf-w0-lZh" secondAttribute="bottom" constant="16" id="IQa-No-PFW"/>
+                    <constraint firstAttribute="bottom" secondItem="3XW-kA-pb1" secondAttribute="bottom" id="IW4-oM-iFo"/>
+                    <constraint firstItem="3XW-kA-pb1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ik4-AD-Mzz"/>
+                    <constraint firstAttribute="trailing" secondItem="3XW-kA-pb1" secondAttribute="trailing" id="JLR-zu-bc2"/>
+                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="U7y-L7-EhN"/>
+                    <constraint firstItem="gTf-w0-lZh" firstAttribute="top" secondItem="xgy-VZ-T9c" secondAttribute="bottom" constant="4" id="cfu-wd-gkb"/>
+                    <constraint firstItem="Zcc-62-G5Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="jd8-1H-Djj"/>
+                    <constraint firstItem="xgy-VZ-T9c" firstAttribute="leading" secondItem="gTf-w0-lZh" secondAttribute="leading" id="q9J-H6-jyj"/>
+                    <constraint firstItem="gTf-w0-lZh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vN4-EG-WH7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -67,6 +68,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Map" width="31" height="31"/>
+        <image name="ebook" width="52" height="52"/>
     </resources>
 </document>
