--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,15 +14,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
-                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
-                        </connections>
-                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTR-s9-34N">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
                         <subviews>
@@ -62,13 +54,26 @@
                             <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="8" id="wZR-G0-CUB"/>
                         </constraints>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="71"/>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="3" id="4Tw-kp-o1z"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AWK-10-juO"/>
                     <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="Kkv-96-Rpp"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="dMs-iS-weg" secondAttribute="trailing" constant="-8" id="VIp-AV-0jc"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cjX-I8-OZE"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="dMs-iS-weg" secondAttribute="bottom" constant="-8" id="kEx-J4-2T2"/>
+                    <constraint firstItem="dMs-iS-weg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="tiK-3J-3Cd"/>
+                    <constraint firstItem="dMs-iS-weg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="wkv-uq-iCZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
